<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomePage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="152dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center|start"
        android:text="@string/live_your_moment_again"
        android:textColor="#000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="314dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/have_an_account_already"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFb" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/log_in"
        android:textColor="#008000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnFb" />

    <!--    <ImageButton-->
<!--        android:id="@+id/btnFb"-->
<!--        android:layout_width="75dp"-->
<!--        android:layout_height="75dp"-->
<!--        android:layout_marginTop="68dp"-->
<!--        android:background="@null"-->
<!--        android:scaleType="fitXY"-->

<!--        app:srcCompat="@drawable/ic_facebook" />-->

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate" />

</androidx.constraintlayout.widget.ConstraintLayout>